--- a/aside.css
+++ b/aside.css
@@ -18,7 +18,7 @@
 
     display: flex;
     background-color: var(--body-bg-color);
-    gap: 3rem;
+    gap: .8rem;
   }
 
   aside, main { /* LINHAS DE MARCAÇÃO */
