--- a/main.css
+++ b/main.css
@@ -32,3 +32,50 @@ width: 90%;
     margin-left: 3rem;
     font-size: 1.3rem;
 }
+
+.projetos-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1rem;
+    justify-content: space-evenly;
+
+}
+
+.projeto {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 23rem;
+    height: 11rem;
+    gap: 1rem;
+    background-color: var(--bg-cards);
+    border-radius: 20px;
+    box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.projeto img{
+height: 14px;
+}
+.header-box {
+    display: flex;
+    gap: .3rem;
+    align-items: center;
+}
+.footer-box {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: .3rem;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: auto;
+
+}
+
+.footer-box div {
+    width: 100%;
+    text-align: right;
+}
+
