--- a/main.css
+++ b/main.css
@@ -53,6 +53,7 @@ width: 90%;
     background-color: var(--bg-cards);
     border-radius: 20px;
     box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.2);
+    width: 30vw;
 }
 
 .projeto img{
